--- a/Html_25.html
+++ b/Html_25.html
@@ -6,14 +6,17 @@
     <title>Популяционная динамика</title>
     <meta name="description" content="The HTML5 sample">
     <meta name="author" content="from internet">
-    <link rel="stylesheet" href="css\styles.css">
+    <link rel="stylesheet" href="css\s25.css">
 </head>
 
 <body>
     <header>
         <hr>
         <p><a name="top"></a></p>
-        <h1>Кожные заболевания</h1>
+        <div class="container">
+            <img src="image/gran.png" alt="gran" style="width: 100%;">
+        <h1>Кожные заболевания</h1></div>
+        </div>
         <hr>
     </header>
     <nav>
