--- a/Html_25.html
+++ b/Html_25.html
@@ -14,29 +14,33 @@
         <hr>
         <p><a name="top"></a></p>
         <div class="container">
-            <img src="image/gran.png" alt="gran" style="width: 100%;">
-        <h1>Кожные заболевания</h1></div>
-        </div>
-        <hr>
-    </header>
-    <nav>
-    меню:
-    <p>
-    <ul>
+            <img src="image/gran.jpg" alt="snow" align="" style="width: 100%;">
+        </div class= "top- right">
+             <h1>Кожные заболевания</h1>
+            <nav>
+        <h2> меню:
+        <p>
+        <ul>
         <li><a href="https://ru.wikipedia.org/wiki/%D0%A1%D0%B5%D0%BF%D1%81%D0%B8%D1%81">Сепсис</a></li>
         <li><a href="#octr">Лечение сепсиса</a></li>
         <li><a href="#prankhat">Септический психоз</a></li>
-        <li><a href="#history">Источник информации</a></li>
-        <li><a href="#link">Ссылка на источник в сети интернет</a></li>
-    </ul>
-    </nav>
-    <main>
-        <header>
+        <li><a href="#history">История</a></li>
+        </ul>
+        </h2>
+        </nav>
+        </div>
+        <hr>
+</header>
+<main>
+    
             <h2>Сепсис</h2>
             <hr>
         </header>
 
-        <article>
+        </article>
+        <p><a name="prankhat"></a></p>
+        <div class="container">
+        <img src="img/terapia.jpg"alt="snow"width=35% align="right"
             <header>
                 <h3>Неонатальный сепсис</h3>
             </header>
